[gd_scene load_steps=11 format=2]

[ext_resource path="res://source/GameTimer.gd" type="Script" id=1]
[ext_resource path="res://source/GameTimerGUI.gd" type="Script" id=2]
[ext_resource path="res://assets/BebasNeue.otf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/sfx/Tik.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sfx/AscendString.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/sfx/GameOver.ogg" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]

size = 50
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 200
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Animation" id=3]

length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("CountdownLabel:rect_scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.5, 0.5 ), Vector2( 0.5, 0.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CountdownLabel:rect_size")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 959, 542 ), Vector2( 1920, 1085 ), Vector2( 1920, 1085 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CountdownLabel:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_play_ticking_sound"
} ]
}

[sub_resource type="Animation" id=4]

resource_name = "Disappear"
length = 0.2
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("CountdownLabel:rect_scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CountdownLabel:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 480, 270 ) ]
}

[node name="GameTimer" type="Timer"]

process_mode = 1
wait_time = 0.01
one_shot = true
autostart = false
script = ExtResource( 1 )
countdown_duration = 3
round_end_countdown_duration = 5
enable_debug_duration = true
debug_duration = 0.5

[node name="GUI" type="CanvasLayer" parent="." index="0"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 2 )

[node name="RoundLabel" type="Label" parent="GUI" index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "3:00"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "Rect" ]

[node name="CountdownLabel" type="Label" parent="GUI" index="1"]

visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -480.0
margin_top = -270.0
margin_right = 479.0
margin_bottom = 272.0
rect_rotation = -0.136255
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "3"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Margin", "Rect", "custom_fonts" ]

[node name="CountdownAnimation" type="AnimationPlayer" parent="GUI" index="2"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/. = SubResource( 3 )
anims/Disappear = SubResource( 4 )
blend_times = [  ]
autoplay = ""
_sections_unfolded = [ "Playback Options", "playback" ]

[node name="TikSound" type="AudioStreamPlayer" parent="GUI" index="3"]

stream = ExtResource( 4 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="StringSound" type="AudioStreamPlayer" parent="GUI" index="4"]

stream = ExtResource( 5 )
volume_db = 10.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="GameOverVoice" type="AudioStreamPlayer" parent="GUI" index="5"]

stream = ExtResource( 6 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="timeout" from="." to="." method="_on_timeout" flags=3]

[connection signal="timeout" from="." to="GUI" method="play_last_sequence"]


